DCP-275 Add padding in main title to avoid overlap.

--- a/publishing/publishing-template/css/oxygen/oxygen-print.css
+++ b/publishing/publishing-template/css/oxygen/oxygen-print.css
@@ -62,6 +62,7 @@ pre > code{
   margin-top: 1in;
   font-size: 2.5em;
   line-height: 1.1em;
+  padding-left: 1in; 
 }
 
 /* Chapter titles */
